--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app.js",
   "dependencies": {
     "express": "~4.1.1",
-	"morgan": "^1.0.0",
     "body-parser": "^1.0.2",
-	"error-handler": "^0.1.4",
-	"method-override": "^1.0.0"    
+      "angular":"~1.5.0",
+      "angular-route":"~1.5.0",
+      "mysql":"~2.10.2",
+      "bootstrap":"~ 3.3.6"
   }
 }
